--- a/index.html
+++ b/index.html
@@ -1,63 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8"> 
-    <title>CatPhotoApp</title>
-  </head>
-   <body>
-    <main>
-      <h1>CatPhotoApp</h1>
-      <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-      </section>
-      <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
-        <ul>
-          <li>cat nip</li>
-          <li>laser pointers</li>
-          <li>lasagna</li>
-        </ul>
-        <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
-        </figure>
-        <h3>Top 3 things cats hate:</h3>
-        <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
-        </ol>
-        <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
-        </figure>
-      </section>
-      <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
-          <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
-            <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-            <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-          </fieldset>
-          <fieldset>
-            <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
-            <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-            <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
-          </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">Submit</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
-    </footer>
-  </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photo Gallery</title>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+  <header class="header">
+    <h1>The Kitty Boys Flexbox Photo Gallery</h1>
+  </header>
+  <div class="gallery">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Bikkit3.jpg" alt="Cat 1">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Ivan4.jpg" alt="Cat 2">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\IvanandBuddy1.jpg" alt="Cat 3">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Bikkit1.jpg" alt="Cat 4">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Ivan1.jpg" alt="Cat 5">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\IvanandBuddy2.jpg" alt="Cat 6">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Ivan2.jpg" alt="Cat 7">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Bikkit5.jpg" alt="Cat 8">
+    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\IvanandBuddy3.jpg" alt="Cat 9">
+  </div>
+</body>
+</html>
