--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <h1>The Kitty Boys Flexbox Photo Gallery</h1>
   </header>
   <div class="gallery">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Bikkit3.jpg" alt="Cat 1">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Ivan4.jpg" alt="Cat 2">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\IvanandBuddy1.jpg" alt="Cat 3">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Bikkit1.jpg" alt="Cat 4">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Ivan1.jpg" alt="Cat 5">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\IvanandBuddy2.jpg" alt="Cat 6">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Ivan2.jpg" alt="Cat 7">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\Bikkit5.jpg" alt="Cat 8">
-    <img src="C:\Users\Shayn\source\repos\Responsive-Web-Design-Certification-Project-7-Flexbox-Photo-Gallery\Images for KittyBoyPhotoGallery\IvanandBuddy3.jpg" alt="Cat 9">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Bikkit3.jpg" alt="Cat 1">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Kittyboys2.jpg" alt="Cat 2">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Ivan3.jpg" alt="Cat 3">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Bikkit2.jpg" alt="Cat 4">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\KittyBoys1.jpg" alt="Cat 5">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Ivan2.jpg"" alt="Cat 6">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Bikkit1.jpg" alt="Cat 7">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\KittyBoys3.jpg" alt="Cat 8">
+    <img src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\ImagesForFlexboxPhotoGalleryProject\Ivan1.jpg" alt="Cat 9">
   </div>
 </body>
 </html>
