reverse the src

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Bikkit2.jpg" 
     alt="Cat 6">
     <img 
-    src="Ivan1.jpg" 
+    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Ivan1.jpg" 
     alt="Cat 7">
     <img 
     src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Bikkit1.jpg" 
