FINALLY fixed the image display issue

--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
   </header>
   <div class="gallery">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Bikkit3.jpg" 
+    src="HTMLAssets/Bikkit3.jpg" 
     alt="Cat 1">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Kittyboys2.jpg" 
+    src="HTMLAssets/Kittyboys2.jpg" 
     alt="Cat 2">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Ivan3.jpg" 
+    src="HTMLAssets/Ivan3.jpg" 
     alt="Cat 3">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\KittyBoys1.jpg" 
+    src="HTMLAssets/KittyBoys1.jpg" 
     alt="Cat 4">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Ivan2.jpg"
+    src="HTMLAssets/Ivan2.jpg"
      alt="Cat 5">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Bikkit2.jpg" 
+    src="HTMLAssets/Bikkit2.jpg" 
     alt="Cat 6">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Ivan1.jpg" 
+    src="HTMLAssets/Ivan1.jpg" 
     alt="Cat 7">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\Bikkit1.jpg" 
+    src="HTMLAssets/Bikkit1.jpg" 
     alt="Cat 8">
     <img 
-    src="C:\Users\Shayn\source\repos\Flexbox-Photo-Gallery\Assets\KittyBoys3.jpg" 
+    src="HTMLAssets/KittyBoys3.jpg" 
     alt="Cat 9">
 
   </div>
