--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <h1>The Kitty Boys Flexbox Photo Gallery</h1>
+    <h1>The Kitty Boys Photo Gallery</h1>
   </header>
   <div class="gallery">
     <img 
